tests/machine/x/java/append_builtin.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsappend_builtin2565093847/001/Main.java:3: error: incompatible types: no instance(s) of type variable(s) T exist so that List<T> conforms to int
	static int a = java.util.Arrays.asList(1, 2);
	                                      ^
  where T is a type-variable:
    T extends Object declared in method <T>asList(T...)
/tmp/TestCompileValidProgramsappend_builtin2565093847/001/Main.java:10: error: method append in class Main cannot be applied to given types;
	System.out.println(append(a, 3));
	                   ^
  required: List<T>,T
  found:    int,int
  reason: cannot infer type-variable(s) T
    (argument mismatch; int cannot be converted to List<T>)
  where T is a type-variable:
    T extends Object declared in method <T>append(List<T>,T)
2 errors


  1| let a = [1,2]
  2| print(append(a, 3))
